style/page-home: Fix margin on mobile home

--- a/src/components/custom/custom-home-about/custom-home-about.sass
+++ b/src/components/custom/custom-home-about/custom-home-about.sass
@@ -24,7 +24,7 @@
     @media(max-width: 1024px)
       padding: 2rem
       width: 100%
-      height: 460px
+      height: 100%
 
   &__subtitle
     margin-bottom: 12px
