--- a/src/components/custom/custom-home-featured/custom-home-featured.sass
+++ b/src/components/custom/custom-home-featured/custom-home-featured.sass
@@ -56,7 +56,7 @@
 
     &--title
       position: absolute
-      bottom: -330px
+      bottom: -85%
       margin-bottom: 4px
       background: rgba(25, 48, 88, .7)
       padding: 16px 0 24px 16px
