--- a/src/components/custom/custom-home-startup/custom-home-startup.sass
+++ b/src/components/custom/custom-home-startup/custom-home-startup.sass
@@ -16,7 +16,7 @@
     @media(max-width: 1024px)
       padding: 4rem 2rem
       width: 100%
-      height: 560px
+      height: 100%
 
   &__right
     width: 50%
